# pointcloud_merger

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  nodelets.xml  package.xml
.github/workflows/: docker-image.yml
docker/: Dockerfile.kinetic  Dockerfile.melodic
include/pointcloud_merger/: pointcloud_merger_nodelet.h
launch/: sample_node.launch  sample_node_debug.launch  sample_node_husky.launch  sample_node_test.launch  sample_nodelet.launch  test_husky.rviz  test_world.launch
models/: combo.urdf.xacro  depth.urdf.xacro  sensor.dae
rviz/: test.rviz
src/: pointcloud_merger_node.cpp  pointcloud_merger_nodelet.cpp
test/: pointcloud_merger_test.py  pointcloud_merger_test.test  test_pc_merger.cpp  test_pc_merger.h
test/data/: cloud1 (copie).pcd  cloud1_updated.pcd  cloud2 (copie).pcd  cloud2_updated.pcd  cloud_out.pcd  cloud_out_updated.pcd
world/: test.world
