<?xml version="1.0"?>
<package format="2">
    <name>pointcloud_merger</name>
    <version>0.0.1</version>
    <description>Merge 2 pointcloud2s into one</description>

    <maintainer email="thomas.simon@ensta-paris.com">Thomas SIMON</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>laser_geometry</depend>
    <depend>message_filters</depend>
    <depend>nodelet</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_sensor_msgs</depend>
    <build_depend>rostest</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_export_depend>pcl_conversions</build_export_depend>
    <build_export_depend>pcl_ros</build_export_depend>
    <exec_depend>rostest</exec_depend>
    <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <build_depend>libpcl-all-dev</build_depend>
    <exec_depend>libpcl-all</exec_depend>

    <export>
        <nodelet plugin="${prefix}/nodelets.xml"/>
    </export>
</package>
